--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "express-rate-limit": "^6.8.1",
+    "request": "^2.88.2",
     "sqlite3": "^5.1.6"
   }
 }
